--- a/wookie-movies/src/app/globals.css
+++ b/wookie-movies/src/app/globals.css
@@ -1,7 +1,3 @@
-@font-face {
-    font-family: 'wookie';
-    src: url('../../public/fonts/KCWookieScript.otf');
-}
 
 :root {
     --background: #ffffff;
@@ -17,7 +13,7 @@ body {
 body {
     color: var(--foreground);
     background: var(--background);
-    font-family: 'wookie', Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
