--- a/wookie-movies/src/components/Logo/Logo.module.scss
+++ b/wookie-movies/src/components/Logo/Logo.module.scss
@@ -1,4 +1,5 @@
 @import '../../styles/colours';
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Monoton&display=swap');
 
 .wrapper {
   display: flex;
@@ -16,11 +17,20 @@
 }
 
 .image {
+
 }
 
 .title {
   display: flex;
   font-size: 30px;
-  font-family: 'wookie', sans-serif;
-  color: $primary-3;
+  font-family: Monoton, sans-serif;
+  color: white;
+  text-shadow: #FC0 1px 0 10px;
 }
+
+@media (max-width: 768px) {
+  .title {
+    display: none;
+  }
+}
+
