feat: improved search, added styling

--- a/wookie-movies/src/app/globals.css
+++ b/wookie-movies/src/app/globals.css
@@ -28,3 +28,11 @@ a {
     color: inherit;
     text-decoration: none;
 }
+
+img {
+    -khtml-user-select: none;
+    -o-user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+}
