--- a/wookie-movies/src/components/MovieList/MovieList.module.scss
+++ b/wookie-movies/src/components/MovieList/MovieList.module.scss
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Hairline');
+
 .title {
   color: white;
   font-size: 24px;
+  font-family: Bungee-Hairline, sans-serif;
 }
