--- a/wookie-movies/src/components/MovieView/MovieView.module.scss
+++ b/wookie-movies/src/components/MovieView/MovieView.module.scss
@@ -6,6 +6,7 @@
   padding: 1.5rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   width: 100%;
+  min-height: 600px;
 }
 
 .image {
@@ -15,6 +16,7 @@
 .detailsWrapper {
   display: flex;
   flex-direction: column;
+  gap: 10px
 }
 
 .titleWrapper {
@@ -37,14 +39,17 @@
   font-size: 0.9rem;
   color: #b3b3b3;
   margin-bottom: 0.5rem;
+  text-align: center;
 }
 
 .detail {
   font-size: 0.9rem;
   color: #d1d1d1;
+  text-align: left;
 }
 
-@media (max-width: 600px) {
+
+@media (max-width: 768px) {
   .wrapper {
     flex-direction: column;
     align-items: center;
@@ -54,5 +59,9 @@
   .titleWrapper {
     flex-direction: column;
     align-items: center;
+  }
+
+  .detailRow {
+    justify-content: center;
   }
 }
