--- a/wookie-movies/src/components/Searchbar/Searchbar.module.scss
+++ b/wookie-movies/src/components/Searchbar/Searchbar.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/colours';
+
 .wrapper {
   display: flex;
   align-items: center;
@@ -27,7 +29,7 @@
 }
 
 .button {
-  background: #007bff;
+  background: $primary-5;
   border: none;
   padding: 8px;
   border-radius: 50%;
@@ -38,7 +40,7 @@
   justify-content: center;
 
   &:hover {
-    background: #0056b3;
+    background: $primary-4;
   }
 
   svg {
