feat: split into server and client side api to hide secrets

--- a/wookie-movies/src/components/ContentWrapper/ContentWrapper.module.scss
+++ b/wookie-movies/src/components/ContentWrapper/ContentWrapper.module.scss
@@ -5,3 +5,13 @@
   width: 100%;
   padding: 160px 20px;
 }
+
+.error {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 160px 40px;
+  font-size: 30px;
+  color: white;
+  font-weight: bold;
+}
