--- a/src/components/MovieCarousel/MovieCarousel.module.scss
+++ b/src/components/MovieCarousel/MovieCarousel.module.scss
@@ -1,12 +1,13 @@
 .wrapper {
+  display: flex;
   overflow-x: auto;
   scroll-snap-type: x mandatory;
-  display: flex;
-  padding: 20px 0;
   scrollbar-width: none;
   -ms-overflow-style: none;
   scroll-behavior: smooth;
+  padding: 20px 0;
   cursor: grab;
+  scroll-padding: 0 20px;
 }
 
 .wrapper::-webkit-scrollbar {
